--- a/postgresql/Makefile.help
+++ b/postgresql/Makefile.help
@@ -1,3 +1,6 @@
+################################################################################
+# マクロ
+################################################################################
 # Makefileの中身を抽出してhelpとして1行で出す
 # $(1): Makefile名
 define help
@@ -6,6 +9,9 @@ define help
   | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
 endef
 
+################################################################################
+# タスク
+################################################################################
 .PHONY: help
 help: ## Make タスク一覧
 	@echo '######################################################################'
@@ -14,4 +20,4 @@ help: ## Make タスク一覧
 	@echo '# or'
 	@echo '# $$ make XXX --dry-run'
 	@echo '######################################################################'
-	ls -1 Makefile.* | xargs -I {file-name} $(call help,{file-name})
+	@ls -1 Makefile.* | xargs -I {file-name} $(call help,{file-name})
