--- a/postgresql/Makefile
+++ b/postgresql/Makefile
@@ -1,4 +1,4 @@
 include Makefile.gitignore
 include Makefile.help
 include Makefile.docker-postgres
-include Makefile.pg-practice
+include Makefile.postgres-practice
